<resources>
    <string name="app_name">My Tablet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="week_mode">Week mode</string>
    <string name="analysis_string">Анализы</string>
    <string name="profile_string">Профиль</string>
    <string name="year_string">2023</string>
    <string name="month_string">April</string>
    <string name="add_string">+</string>
    <string name="textview">TextView</string>
    <string name="tablet_image">tablet image</string>
    <string name="name_tablet_string">Название</string>
    <string name="reserve_tablet_string">Запасы лекарства</string>
    <string name="shelf_life_tablet_string">Срок годности</string>
    <string name="next_string">Далее</string>
    <string name="add_taking_tablet">Добавить прием</string>
    <string name="add_tablet">Добавить лекарство</string>
    <string name="time_string">Время</string>
    <string name="start_course">Дата начала приема</string>
    <string name="end_course">Дата окончания приема</string>
    <string name="new_taking">Добавить</string>
    <string name="back_string">Назад</string>
    <string name="taking_number_string">Прием 1</string>
    <string name="add_analysis">Добавить анализ</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>