<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.presentation.takingtablet.TakingTabletFragment">


    <Button
        android:id="@+id/addTakingTabletBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/add_button"
        android:text="@string/add_string"
        android:textSize="@dimen/add_size"
        android:tooltipText="@string/add_taking_tablet"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/startCourseText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="22.02.2002"
        android:backgroundTint="@color/days_color"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/start_course"
        android:inputType="none"
        android:textColorHint="@color/days_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/endCoursetext"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="22.02.2002"
        android:backgroundTint="@color/days_color"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/end_course"
        android:inputType="none"
        android:textColorHint="@color/days_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startCourseText"
        tools:ignore="VisualLintTextFieldSize" />



    <Button
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/days_color"
        android:text="@string/back_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:text="@string/new_taking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        tools:ignore="VisualLintButtonSize" />

    <include
        android:id="@+id/includeItemTaking"
        layout="@layout/item_taking_tablet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endCoursetext" />
    <!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/takingRecyclerView"-->
<!--        android:layout_width="409dp"-->
<!--        android:layout_height="388dp"-->
<!--        android:layout_marginTop="4dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/endCoursetext"-->
<!--        tools:listitem="@layout/item_taking_tablet" />-->
</androidx.constraintlayout.widget.ConstraintLayout>