<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:layout_margin="0dp"
    tools:context=".home.presentation.home.HomeFragment"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/exOneAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/main_calendar_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_calendar_color"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:id="@+id/exOneYearText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:textSize="@dimen/header_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/year_string" />

            <TextView
                android:id="@+id/exOneMonthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/header_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/exOneYearText"
                tools:text="@string/month_string" />

            <CheckBox
                android:id="@+id/weekModeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:buttonTint="@color/purple_700"
                android:padding="2dp"
                android:text="@string/week_mode"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/legendLayout"
            layout="@layout/calendar_day_legend_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_calendar_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exOneAppBarLayout">

        <com.kizitonwose.calendar.view.CalendarView
            android:id="@+id/exOneCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cv_dayViewResource="@layout/calendar_day" />

        <com.kizitonwose.calendar.view.WeekCalendarView
            android:id="@+id/exOneWeekCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cv_dayViewResource="@layout/calendar_day" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:listitem="@layout/tablet_item" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/add_button"
        android:text="@string/add_string"
        android:textSize="@dimen/add_size"
        android:tooltipText="@string/add_tablet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
