<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tablet.TabletFragment">

    <CheckBox
        android:id="@+id/tabletCheckboxBtn"
        android:layout_width="62dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/tablets"
        android:checked="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/vaccineCheckboxBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/vaccine"
        android:checked="false"
        app:layout_constraintStart_toEndOf="@+id/tabletCheckboxBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/creamCheckboxBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/cream"
        android:checked="false"
        app:layout_constraintStart_toEndOf="@+id/vaccineCheckboxBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/dropsCheckboxBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/eye_drops"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/creamCheckboxBtn"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="Витамин B12"
        android:backgroundTint="@color/days_color"
        android:ems="10"
        android:hint="@string/name_tablet_string"
        android:inputType="text"
        android:textColorHint="@color/days_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccineCheckboxBtn"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/reserveEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="180"
        android:backgroundTint="@color/days_color"
        android:ems="10"
        android:hint="@string/reserve_tablet_string"
        android:inputType="number|numberDecimal"
        android:textColorHint="@color/days_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/shelfLifeEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="20.02.2024"
        android:backgroundTint="@color/days_color"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/shelf_life_tablet_string"
        android:inputType="none"
        android:textColorHint="@color/days_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reserveEditText"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/next_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>